--- a/apiv1/deploy-apiv1_3.yaml
+++ b/apiv1/deploy-apiv1_3.yaml
@@ -2,12 +2,9 @@ openapi: 3.0.0
 info:
   version: '1.3'
   title: Bink External API
-  description: 'This document defines the Bink API URLs, parameters, request bodies, responses. Each operation offers a mock end point.'
+  description: 'This document defines the Bink API URLs, parameters, request bodies, responses.'
   contact:
     email: mmorar@bink.com
-servers:
-  - description: SwaggerHub API Auto Mocking
-    url: 'https://virtserver.swaggerhub.com/Bink_API/Bink_External_API/1.2'
 paths:
   /membership_transactions:
     get:
