--- a/apiv2/sandbox-banking.yaml
+++ b/apiv2/sandbox-banking.yaml
@@ -15,8 +15,8 @@ info:
     <br><br>
     Document links:
     <ul>
-      <li>[Version History](extras/changelog)</li>
-      <li>[Appendix](extras/appendix)</li>
+      <li>[Version History](changelog)</li>
+      <li>[Appendix](appendix)</li>
     </ul>"
   contact:
     email: mmorar@bink.com
