--- a/apiv2/dev.yaml
+++ b/apiv2/dev.yaml
@@ -3845,6 +3845,7 @@ components:
               - order: 1
                 display_label: 'Card number'
                 validation: "^((63317491)|(63317492))[0-9]{10}$"
+                validation_description: null
                 description: "Your 10 digit card number"
                 credential_slug: "card_number"
                 type: "text"
@@ -3855,6 +3856,7 @@ components:
               - order: 2
                 display_label: 'Email address'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "Your e-mail address"
                 credential_slug: "email"
                 type: "text"
@@ -3865,6 +3867,7 @@ components:
               - order: 3
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -3929,6 +3932,7 @@ components:
               - order: 1
                 display_label: 'Email address'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "Your e-mail address"
                 credential_slug: "email"
                 type: "text"
@@ -3939,6 +3943,7 @@ components:
               - order: 2
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -4012,6 +4017,7 @@ components:
                   order: 1
                   display_label: 'Bonus card number'
                   validation: "^((63317491)|(63317492))[0-9]{10}$"
+                  validation_description: null
                   description: "Your 10 digit card number"
                   credential_slug: "card_number"
                   type: "text"
@@ -4031,6 +4037,7 @@ components:
               - order: 1
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -4089,6 +4096,13 @@ components:
           minLength: 0
           maxLength: 250
           pattern: ".*"
+        validation_description:
+          type: string
+          description: "Helper text/Explanation of validation. Hint on how to resolve"
+          example: 'Password must contain at be longer than 8 and contain at least 1 captial, 1 numeric'
+          minLength: 0
+          maxLength: 250
+          pattern: "[\\u0000-\\u2FFF]+"
         description:
           type: string
           description: "Text field that can be used as a hint to the user, guiding them on input."
